[package]
name = "rusty_di_runner"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_di_runner"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["bytes", "fs", "io-std", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
