[package]
name = "rusty_di_runner"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/vkhinvasara/rusty_di_runner"
homepage = "https://github.com/vkhinvasara/rusty_di_runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_di_runner"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
reqwest = { version = "0.12.24",default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
tokio = { version = "1.48.0", features = ["bytes", "fs", "io-std", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
