[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "rusty_di_runner"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/vkhinvasara/rusty_di_runner"
Repository = "https://github.com/vkhinvasara/rusty_di_runner"
"Source Code" = "https://github.com/vkhinvasara/rusty_di_runner"